--- a/pgsql_fdw/README
+++ b/pgsql_fdw/README
@@ -1,7 +1,7 @@
 ================================================================================
  README for pgsql_fdw
 
- Copyright (c) 2011, NIPPON TELEGRAPH AND TELEPHONE CORPORATION
+ Copyright (c) 2011-2012, NIPPON TELEGRAPH AND TELEPHONE CORPORATION
 ================================================================================
 
 Overview of pgsql_fdw
